Changed title to clarify python release versioin
Co-Authored-By: Saul Shanabrook <s.shanabrook@gmail.com>

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -110,7 +110,7 @@ jobs:
       displayName: 'GitHub release (create)'
       inputs:
         gitHubConnection: 'github-zenithworks'
-        title: JupyterLab Release version $(Build.SourceBranchName) 
+        title: JupyterLab Python version $(Build.SourceBranchName) 
         releaseNotesSource: input
         releaseNotes: |         
           [Installation](https://github.com/jupyterlab/jupyterlab/blob/master/README.md#installation)   |   [Getting Started](https://jupyterlab.readthedocs.io/en/stable/getting_started/overview.html)   |   [Changelog](https://jupyterlab.readthedocs.io/en/latest/getting_started/changelog.html)     
