--- a/packages/ui-components/tsconfig.json
+++ b/packages/ui-components/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfigbase",
   "compilerOptions": {
     "outDir": "lib",
-    "types": ["webpack-env"],
+    "types": ["webpack-env", "node"],
     "rootDir": "src"
   },
   "include": ["src/**/*"]
