--- a/packages/metapackage/tsconfig.json
+++ b/packages/metapackage/tsconfig.json
@@ -223,6 +223,9 @@
       "path": "../vdom-extension"
     },
     {
+      "path": "../vega4-extension"
+    },
+    {
       "path": "../vega5-extension"
     }
   ]
