--- a/packages/metapackage/package.json
+++ b/packages/metapackage/package.json
@@ -104,6 +104,7 @@
     "@jupyterlab/ui-components": "^1.0.0-alpha.11",
     "@jupyterlab/vdom": "^1.0.0-alpha.11",
     "@jupyterlab/vdom-extension": "^1.0.0-alpha.11",
+    "@jupyterlab/vega4-extension": "^1.0.0-alpha.11",
     "@jupyterlab/vega5-extension": "^1.0.0-alpha.11"
   },
   "devDependencies": {
