--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
       "jupyterlab/tests/mock_packages/extension"
     ],
     "nohoist": [
-      "**/vega*/**"
+      "@jupyterlab/vega*-extension/vega*/**"
     ]
   },
   "scripts": {
