--- a/packages/help-extension/package.json
+++ b/packages/help-extension/package.json
@@ -39,6 +39,7 @@
     "@jupyterlab/application": "^1.0.0-alpha.13",
     "@jupyterlab/apputils": "^1.0.0-alpha.13",
     "@jupyterlab/coreutils": "^3.0.0-alpha.13",
+    "@jupyterlab/inspector": "^1.0.0-alpha.13",
     "@jupyterlab/mainmenu": "^1.0.0-alpha.13",
     "@jupyterlab/services": "^4.0.0-alpha.13",
     "@phosphor/widgets": "^1.8.0",
