--- a/packages/vega5-extension/package.json
+++ b/packages/vega5-extension/package.json
@@ -43,7 +43,9 @@
     "rimraf": "~2.6.2",
     "typedoc": "^0.14.2",
     "typescript": "~3.5.1",
-    "vega-embed": "^4.2.0"
+    "vega": "^5.4.0",
+    "vega-embed": "^4.2.0",
+    "vega-lite": "^3.3.0"
   },
   "publishConfig": {
     "access": "public"
