--- a/packages/nbconvert-css/package.json
+++ b/packages/nbconvert-css/package.json
@@ -42,12 +42,12 @@
     "@jupyterlab/rendermime": "^1.0.0"
   },
   "devDependencies": {
-    "@jupyterlab/apputils": "^1.0.0-rc.1",
-    "@jupyterlab/cells": "^1.0.0-rc.1",
-    "@jupyterlab/codemirror": "^1.0.0-rc.1",
-    "@jupyterlab/notebook": "^1.0.0-rc.1",
-    "@jupyterlab/outputarea": "^1.0.0-rc.1",
-    "@jupyterlab/rendermime": "^1.0.0-rc.1",
+    "@jupyterlab/apputils": "^1.0.0",
+    "@jupyterlab/cells": "^1.0.0",
+    "@jupyterlab/codemirror": "^1.0.0",
+    "@jupyterlab/notebook": "^1.0.0",
+    "@jupyterlab/outputarea": "^1.0.0",
+    "@jupyterlab/rendermime": "^1.0.0",
     "css-loader": "~2.1.1",
     "file-loader": "~3.0.1",
     "mini-css-extract-plugin": "~0.6.0",
