--- a/packages/outputarea/package.json
+++ b/packages/outputarea/package.json
@@ -45,6 +45,7 @@
     "@phosphor/coreutils": "^1.3.1",
     "@phosphor/disposable": "^1.2.0",
     "@phosphor/messaging": "^1.2.3",
+    "@phosphor/properties": "^1.1.3",
     "@phosphor/signaling": "^1.2.3",
     "@phosphor/widgets": "^1.8.0"
   },
