--- a/packages/toc/package.json
+++ b/packages/toc/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jupyterlab/toc",
-  "version": "1.0.0-rc.0",
+  "version": "1.0.0",
   "private": false,
   "description": "Table of Contents extension for JupyterLab",
   "keywords": [
@@ -38,16 +38,16 @@
     ]
   },
   "dependencies": {
-    "@jupyterlab/application": "^1.0.0-rc.0",
-    "@jupyterlab/apputils": "^1.0.0-rc.0",
-    "@jupyterlab/cells": "^1.0.0-rc.0",
-    "@jupyterlab/coreutils": "^3.0.0-rc.0",
-    "@jupyterlab/docmanager": "^1.0.0-rc.0",
-    "@jupyterlab/docregistry": "^1.0.0-rc.0",
-    "@jupyterlab/fileeditor": "^1.0.0-rc.0",
-    "@jupyterlab/markdownviewer": "^1.0.0-rc.0",
-    "@jupyterlab/notebook": "^1.0.0-rc.0",
-    "@jupyterlab/rendermime": "^1.0.0-rc.0",
+    "@jupyterlab/application": "^1.0.0",
+    "@jupyterlab/apputils": "^1.0.0",
+    "@jupyterlab/cells": "^1.0.0",
+    "@jupyterlab/coreutils": "^3.0.0",
+    "@jupyterlab/docmanager": "^1.0.0",
+    "@jupyterlab/docregistry": "^1.0.0",
+    "@jupyterlab/fileeditor": "^1.0.0",
+    "@jupyterlab/markdownviewer": "^1.0.0",
+    "@jupyterlab/notebook": "^1.0.0",
+    "@jupyterlab/rendermime": "^1.0.0",
     "@phosphor/algorithm": "^1.1.3",
     "@phosphor/coreutils": "^1.3.1",
     "@phosphor/messaging": "^1.2.3",
