--- a/packages/outputconsole/package.json
+++ b/packages/outputconsole/package.json
@@ -37,6 +37,7 @@
     "@jupyterlab/outputarea": "^1.1.0-alpha.1",
     "@jupyterlab/rendermime": "^1.1.0-alpha.1",
     "@phosphor/coreutils": "^1.3.1",
+    "@phosphor/signaling": "^1.2.3",
     "@phosphor/widgets": "^1.8.0"
   },
   "devDependencies": {
