--- a/packages/docmanager-extension/package.json
+++ b/packages/docmanager-extension/package.json
@@ -45,6 +45,7 @@
     "@jupyterlab/services": "^4.1.0-alpha.2",
     "@jupyterlab/statusbar": "^1.1.0-alpha.2",
     "@phosphor/algorithm": "^1.1.3",
+    "@phosphor/coreutils": "^1.3.1",
     "@phosphor/disposable": "^1.2.0",
     "@phosphor/widgets": "^1.8.0"
   },
