--- a/testutils/package.json
+++ b/testutils/package.json
@@ -42,6 +42,7 @@
     "@jupyterlab/services": "^4.0.1",
     "@phosphor/coreutils": "^1.3.1",
     "@phosphor/signaling": "^1.2.3",
+    "fs-extra": "^8.0.1",
     "identity-obj-proxy": "^3.0.0",
     "json-to-html": "~0.1.2",
     "node-fetch": "^2.6.0",
