--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
   "dependencies": {
     "@jupyterlab/application": "^1.0.0",
     "@jupyterlab/apputils": "^1.0.0",
+    "@jupyterlab/codeeditor": "^1.0.0",
     "@jupyterlab/console": "^1.0.0",
     "@jupyterlab/launcher": "^1.0.0",
     "@jupyterlab/notebook": "^1.0.0",
     "@phosphor/coreutils": "^1.3.1",
+    "@phosphor/disposable": "^1.2.0",
     "@phosphor/widgets": "^1.8.0"
   },
   "devDependencies": {
