--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "@jupyterlab/apputils": "^1.0.0",
     "@jupyterlab/codeeditor": "^1.0.0",
     "@jupyterlab/console": "^1.0.0",
+    "@jupyterlab/coreutils": "^3.0.0",
+    "@jupyterlab/fileeditor": "^1.0.2",
     "@jupyterlab/launcher": "^1.0.0",
     "@jupyterlab/notebook": "^1.0.0",
     "@phosphor/coreutils": "^1.3.1",
