change "related bugs" to "new discussion", add link for new issue

--- a/.github/lock.yml
+++ b/.github/lock.yml
@@ -16,8 +16,8 @@ lockLabel: false
 # Comment to post before locking. Set to `false` to disable
 lockComment: >
   This thread has been automatically locked since there has not been
-  any recent activity after it was closed. Please open a new issue for
-  related bugs.
+  any recent activity after it was closed. Please open a [new issue](https://github.com/jupyterlab/jupyterlab/issues/new/choose)
+  for new discussion.
 
 # Assign `resolved` as the reason for locking. Set to `false` to disable
 setLockReason: true
