--- a/packages/outputconsole/package.json
+++ b/packages/outputconsole/package.json
@@ -32,15 +32,18 @@
     "watch": "tsc -w --listEmittedFiles"
   },
   "dependencies": {
+    "@blueprintjs/core": "^3.9.0",
     "@jupyterlab/apputils": "^1.1.0-alpha.1",
     "@jupyterlab/coreutils": "^3.1.0-alpha.1",
     "@jupyterlab/outputarea": "^1.1.0-alpha.1",
     "@jupyterlab/rendermime": "^1.1.0-alpha.1",
     "@jupyterlab/services": "^4.1.0-alpha.1",
+    "@jupyterlab/ui-components": "^1.1.0-alpha.1",
     "@phosphor/coreutils": "^1.3.1",
     "@phosphor/messaging": "^1.2.3",
     "@phosphor/signaling": "^1.2.3",
-    "@phosphor/widgets": "^1.8.0"
+    "@phosphor/widgets": "^1.8.0",
+    "react": "~16.8.4"
   },
   "devDependencies": {
     "rimraf": "~2.6.2",
