--- a/testutils/package.json
+++ b/testutils/package.json
@@ -40,8 +40,8 @@
     "@jupyterlab/notebook": "^2.0.0-alpha.1",
     "@jupyterlab/rendermime": "^2.0.0-alpha.1",
     "@jupyterlab/services": "^5.0.0-alpha.1",
-    "@phosphor/coreutils": "^1.3.1",
-    "@phosphor/signaling": "^1.3.0",
+    "@lumino/coreutils": "^1.3.1",
+    "@lumino/signaling": "^1.3.0",
     "fs-extra": "^8.0.1",
     "identity-obj-proxy": "^3.0.0",
     "json-to-html": "~0.1.2",
