--- a/buildutils/package.json
+++ b/buildutils/package.json
@@ -39,7 +39,7 @@
     "watch": "tsc -w --listEmittedFiles"
   },
   "dependencies": {
-    "@phosphor/coreutils": "^1.3.1",
+    "@lumino/coreutils": "^1.3.1",
     "@yarnpkg/lockfile": "^1.1.0",
     "child_process": "~1.0.2",
     "commander": "~2.20.0",
