--- a/examples/cell/package.json
+++ b/examples/cell/package.json
@@ -15,8 +15,8 @@
     "@jupyterlab/rendermime": "^2.0.0-alpha.1",
     "@jupyterlab/services": "^5.0.0-alpha.1",
     "@jupyterlab/theme-light-extension": "^2.0.0-alpha.1",
-    "@phosphor/commands": "^1.7.0",
-    "@phosphor/widgets": "^1.9.0",
+    "@lumino/commands": "^1.7.0",
+    "@lumino/widgets": "^1.9.0",
     "es6-promise": "~4.2.6"
   },
   "devDependencies": {
