--- a/examples/filebrowser/package.json
+++ b/examples/filebrowser/package.json
@@ -17,9 +17,9 @@
     "@jupyterlab/services": "^5.0.0-alpha.1",
     "@jupyterlab/theme-light-extension": "^2.0.0-alpha.1",
     "@jupyterlab/ui-components": "^2.0.0-alpha.1",
-    "@phosphor/algorithm": "^1.2.0",
-    "@phosphor/commands": "^1.7.0",
-    "@phosphor/widgets": "^1.9.0",
+    "@lumino/algorithm": "^1.2.0",
+    "@lumino/commands": "^1.7.0",
+    "@lumino/widgets": "^1.9.0",
     "es6-promise": "~4.2.6"
   },
   "devDependencies": {
