--- a/examples/terminal/package.json
+++ b/examples/terminal/package.json
@@ -11,7 +11,7 @@
     "@jupyterlab/services": "^5.0.0-alpha.1",
     "@jupyterlab/terminal": "^2.0.0-alpha.1",
     "@jupyterlab/theme-light-extension": "^2.0.0-alpha.1",
-    "@phosphor/widgets": "^1.9.0",
+    "@lumino/widgets": "^1.9.0",
     "es6-promise": "~4.2.6"
   },
   "devDependencies": {
