--- a/packages/celltags/package.json
+++ b/packages/celltags/package.json
@@ -43,7 +43,7 @@
     "@jupyterlab/cells": "^2.0.0-alpha.1",
     "@jupyterlab/notebook": "^2.0.0-alpha.1",
     "@jupyterlab/ui-components": "^2.0.0-alpha.1",
-    "@phosphor/widgets": "^1.9.0",
+    "@lumino/widgets": "^1.9.0",
     "@types/node": "^12.0.2"
   },
   "devDependencies": {
