--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -3,13 +3,14 @@ current_version = 2, 0, 0, 'alpha', 4
 commit = False
 tag = False
 parse = (?P<major>\d+)\,\ (?P<minor>\d+)\,\ (?P<patch>\d+)\,\ \'(?P<release>\S+)\'\,\ (?P<build>\d+)
-serialize = 
+serialize =
 	{major}, {minor}, {patch}, '{release}', {build}
 
 [bumpversion:part:release]
 optional_value = final
-values = 
+values =
 	alpha
+	beta
 	candidate
 	final
 
