--- a/packages/application/package.json
+++ b/packages/application/package.json
@@ -49,6 +49,7 @@
     "@lumino/coreutils": "^1.3.1",
     "@lumino/disposable": "^1.3.0",
     "@lumino/messaging": "^1.3.0",
+    "@lumino/polling": "^1.0.1",
     "@lumino/properties": "^1.1.3",
     "@lumino/signaling": "^1.3.0",
     "@lumino/widgets": "^1.9.0",
