--- a/packages/apputils-extension/package.json
+++ b/packages/apputils-extension/package.json
@@ -46,6 +46,7 @@
     "@lumino/commands": "^1.7.0",
     "@lumino/coreutils": "^1.3.1",
     "@lumino/disposable": "^1.3.0",
+    "@lumino/polling": "^1.0.1",
     "@lumino/widgets": "^1.9.0",
     "es6-promise": "~4.2.6"
   },
