--- a/packages/codemirror/package.json
+++ b/packages/codemirror/package.json
@@ -42,6 +42,7 @@
     "@lumino/commands": "^1.7.0",
     "@lumino/coreutils": "^1.3.1",
     "@lumino/disposable": "^1.3.0",
+    "@lumino/polling": "^1.0.1",
     "@lumino/signaling": "^1.3.0",
     "@lumino/widgets": "^1.9.0",
     "codemirror": "~5.47.0",
