--- a/packages/documentsearch/package.json
+++ b/packages/documentsearch/package.json
@@ -41,6 +41,7 @@
     "@jupyterlab/notebook": "^2.0.0-alpha.4",
     "@lumino/coreutils": "^1.3.1",
     "@lumino/disposable": "^1.3.0",
+    "@lumino/polling": "^1.0.1",
     "@lumino/signaling": "^1.3.0",
     "@lumino/widgets": "^1.9.0",
     "codemirror": "~5.47.0",
