--- a/packages/filebrowser-extension/package.json
+++ b/packages/filebrowser-extension/package.json
@@ -49,6 +49,7 @@
     "@lumino/algorithm": "^1.2.0",
     "@lumino/commands": "^1.7.0",
     "@lumino/messaging": "^1.3.0",
+    "@lumino/polling": "^1.0.1",
     "@lumino/widgets": "^1.9.0"
   },
   "devDependencies": {
