--- a/packages/filebrowser/package.json
+++ b/packages/filebrowser/package.json
@@ -48,6 +48,7 @@
     "@lumino/domutils": "^1.1.3",
     "@lumino/dragdrop": "^1.3.0",
     "@lumino/messaging": "^1.3.0",
+    "@lumino/polling": "^1.0.1",
     "@lumino/signaling": "^1.3.0",
     "@lumino/widgets": "^1.9.0",
     "react": "~16.8.4"
