--- a/packages/inspector/package.json
+++ b/packages/inspector/package.json
@@ -42,6 +42,7 @@
     "@jupyterlab/services": "^5.0.0-alpha.4",
     "@lumino/coreutils": "^1.3.1",
     "@lumino/disposable": "^1.3.0",
+    "@lumino/polling": "^1.0.1",
     "@lumino/signaling": "^1.3.0",
     "@lumino/widgets": "^1.9.0"
   },
