--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -46,6 +46,7 @@
     "@lumino/algorithm": "^1.2.0",
     "@lumino/coreutils": "^1.3.1",
     "@lumino/disposable": "^1.3.0",
+    "@lumino/polling": "^1.0.1",
     "@lumino/signaling": "^1.3.0",
     "node-fetch": "^2.6.0",
     "ws": "^7.0.0"
