--- a/packages/statusbar/package.json
+++ b/packages/statusbar/package.json
@@ -40,6 +40,7 @@
     "@lumino/coreutils": "^1.3.1",
     "@lumino/disposable": "^1.3.0",
     "@lumino/messaging": "^1.3.0",
+    "@lumino/polling": "^1.0.1",
     "@lumino/signaling": "^1.3.0",
     "@lumino/widgets": "^1.9.0",
     "react": "~16.8.4",
