--- a/examples/app/package.json
+++ b/examples/app/package.json
@@ -37,10 +37,7 @@
     "@jupyterlab/theme-dark-extension": "^2.0.0-alpha.4",
     "@jupyterlab/theme-light-extension": "^2.0.0-alpha.4",
     "@jupyterlab/tooltip-extension": "^2.0.0-alpha.4",
-    "@jupyterlab/ui-components-extension": "^2.0.0-alpha.4",
-    "es6-promise": "~4.2.6",
-    "react": "~16.8.4",
-    "react-dom": "~16.8.4","
+    "es6-promise": "~4.2.6"
   },
   "devDependencies": {
     "css-loader": "~2.1.1",
