--- a/packages/markedparser/package.json
+++ b/packages/markedparser/package.json
@@ -33,15 +33,15 @@
     "watch": "tsc -b --watch"
   },
   "dependencies": {
-    "@jupyterlab/codemirror": "^2.0.0-alpha.1",
-    "@jupyterlab/rendermime-interfaces": "^2.0.0-alpha.1",
-    "marked": "0.6.2"
+    "@jupyterlab/codemirror": "^2.0.0-alpha.4",
+    "@jupyterlab/rendermime-interfaces": "^2.0.0-alpha.4",
+    "marked": "^0.7.0"
   },
   "devDependencies": {
     "@types/marked": "^0.6.5",
     "rimraf": "~2.6.2",
-    "typedoc": "^0.14.2",
-    "typescript": "~3.5.1"
+    "typedoc": "^0.15.2",
+    "typescript": "~3.7.2"
   },
   "publishConfig": {
     "access": "public"
