--- a/packages/ui-components/.storybook/tsconfig.json
+++ b/packages/ui-components/.storybook/tsconfig.json
@@ -1,23 +1,15 @@
 {
+  "extends": "../../../tsconfigbase.json",
   "compilerOptions": {
-    "baseUrl": "./",
-    "allowSyntheticDefaultImports": true,
-    "module": "es2015",
-    "target": "es5",
     "lib": ["es6", "dom"],
-    "sourceMap": true,
     "allowJs": false,
-    "jsx": "react",
-    "moduleResolution": "node",
     "rootDir": "../",
     "outDir": "dist",
     "noImplicitReturns": true,
     "noImplicitThis": true,
-    "noImplicitAny": true,
     "strictNullChecks": true,
-    "declaration": true,
     "skipLibCheck": true
   },
-  "include": ["src/**/*"],
+  "include": ["../src/**/*"],
   "exclude": ["node_modules"]
 }
