--- a/packages/terminal/package.json
+++ b/packages/terminal/package.json
@@ -41,7 +41,8 @@
     "@lumino/domutils": "^1.1.5",
     "@lumino/messaging": "^1.3.1",
     "@lumino/widgets": "^1.9.4",
-    "xterm": "~3.13.2"
+    "xterm": "~4.3.0",
+    "xterm-addon-fit": "~0.3.0"
   },
   "devDependencies": {
     "rimraf": "~3.0.0",
@@ -54,7 +55,7 @@
   "jupyterlab": {
     "extraStyles": {
       "xterm": [
-        "src/xterm.css"
+        "css/xterm.css"
       ]
     }
   }
