--- a/packages/celltags-extension/package.json
+++ b/packages/celltags-extension/package.json
@@ -40,8 +40,7 @@
   "dependencies": {
     "@jupyterlab/application": "^2.0.0-alpha.4",
     "@jupyterlab/celltags": "^0.1.0",
-    "@jupyterlab/notebook": "^2.0.0-alpha.4",
-    "@types/node": "^12.0.2"
+    "@jupyterlab/notebook": "^2.0.0-alpha.4"
   },
   "devDependencies": {
     "rimraf": "~2.6.2",
