--- a/packages/celltags/package.json
+++ b/packages/celltags/package.json
@@ -43,8 +43,7 @@
     "@jupyterlab/cells": "^2.0.0-alpha.4",
     "@jupyterlab/notebook": "^2.0.0-alpha.4",
     "@jupyterlab/ui-components": "^2.0.0-alpha.4",
-    "@lumino/widgets": "^1.9.0",
-    "@types/node": "^12.0.2"
+    "@lumino/widgets": "^1.9.0"
   },
   "devDependencies": {
     "rimraf": "~2.6.2",
