--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jupyterlab/debugger",
-  "version": "0.1.0-alpha.3",
+  "version": "0.1.0-rc.1",
   "description": "JupyterLab - Debugger Extension",
   "homepage": "https://github.com/jupyterlab/debugger",
   "bugs": {
