--- a/packages/celltags-extension/package.json
+++ b/packages/celltags-extension/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jupyterlab/celltags-extension",
-  "version": "0.1.0",
+  "version": "2.0.0-alpha.4",
   "description": "An extension for manipulating tags in cell metadata",
   "keywords": [
     "jupyter",
@@ -39,7 +39,7 @@
   },
   "dependencies": {
     "@jupyterlab/application": "^2.0.0-alpha.4",
-    "@jupyterlab/celltags": "^0.1.0",
+    "@jupyterlab/celltags": "^2.0.0-alpha.4",
     "@jupyterlab/notebook": "^2.0.0-alpha.4"
   },
   "devDependencies": {
