--- a/packages/celltags/package.json
+++ b/packages/celltags/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jupyterlab/celltags",
-  "version": "0.1.0",
+  "version": "2.0.0-alpha.4",
   "description": "An extension for manipulating tags in cell metadata",
   "keywords": [
     "jupyter",
