--- a/packages/metapackage/package.json
+++ b/packages/metapackage/package.json
@@ -37,8 +37,8 @@
     "@jupyterlab/apputils-extension": "^2.0.0-alpha.4",
     "@jupyterlab/attachments": "^2.0.0-alpha.4",
     "@jupyterlab/cells": "^2.0.0-alpha.4",
-    "@jupyterlab/celltags": "^0.1.0",
-    "@jupyterlab/celltags-extension": "^0.1.0",
+    "@jupyterlab/celltags": "^2.0.0-alpha.4",
+    "@jupyterlab/celltags-extension": "^2.0.0-alpha.4",
     "@jupyterlab/codeeditor": "^2.0.0-alpha.4",
     "@jupyterlab/codemirror": "^2.0.0-alpha.4",
     "@jupyterlab/codemirror-extension": "^2.0.0-alpha.4",
