--- a/packages/celltags/package.json
+++ b/packages/celltags/package.json
@@ -43,10 +43,10 @@
     "@jupyterlab/cells": "^2.0.0-alpha.4",
     "@jupyterlab/notebook": "^2.0.0-alpha.4",
     "@jupyterlab/ui-components": "^2.0.0-alpha.4",
-    "@lumino/widgets": "^1.9.4",
-    "@types/node": "^12.12.17"
+    "@lumino/widgets": "^1.9.4"
   },
   "devDependencies": {
+    "@types/node": "^12.12.17",
     "rimraf": "~3.0.0",
     "typescript": "~3.7.3"
   }
