--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "analyze:prod": "cd dev_mode && jlpm run build:prod --analyze",
     "build": "jlpm run build:dev",
     "build:core": "cd jupyterlab/staging && jlpm && (jlpm deduplicate || jlpm) && jlpm run build",
-    "build:dev": "jlpm run integrity && jlpm run build:vega && jlpm run build:packages && cd dev_mode && jlpm run build",
+    "build:dev": "jlpm run integrity && jlpm run build:packages && cd dev_mode && jlpm run build",
     "build:dev:prod": "jlpm run integrity && jlpm run build:packages && cd dev_mode && jlpm run build:prod",
     "build:examples": "lerna run build --scope \"@jupyterlab/example-*\"",
     "build:packages": "cd packages/metapackage && jlpm run build",
@@ -32,9 +32,6 @@
     "build:test": "lerna run build --scope \"@jupyterlab/test-*\" --concurrency 1",
     "build:testutils": "cd testutils && jlpm run build",
     "build:utils": "cd buildutils && jlpm run build",
-    "build:vega": "jlpm run build:vega:4 && jlpm run build:vega:5",
-    "build:vega:4": "cd prebuild/vega4 && jlpm && jlpm run build",
-    "build:vega:5": "cd prebuild/vega5 && jlpm && jlpm run build",
     "bump:js:major": "node buildutils/lib/bump-js-major.js",
     "bumpversion": "node buildutils/lib/bumpversion.js",
     "clean": "jlpm run clean:dev && jlpm run clean:packages",
