--- a/buildutils/package.json
+++ b/buildutils/package.json
@@ -54,8 +54,7 @@
     "semver": "^6.3.0",
     "sort-package-json": "~1.31.0",
     "typescript": "~3.7.3",
-    "webpack": "^4.41.2",
-    "which": "^2.0.2"
+    "webpack": "^4.41.2"
   },
   "devDependencies": {
     "@types/fs-extra": "^8.0.1",
