--- a/packages/settingregistry/package.json
+++ b/packages/settingregistry/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@jupyterlab/settingsregistry",
+  "name": "@jupyterlab/settingregistry",
   "version": "2.0.0-alpha.4",
   "description": "Settings registry for Jupyterlab",
   "homepage": "https://github.com/jupyterlab/jupyterlab",
@@ -17,9 +17,7 @@
     "schema/*.json",
     "style/**/*.{css,eot,gif,html,jpg,json,png,svg,woff2,ttf}"
   ],
-  "sideEffects": [
-    "style/**/*"
-  ],
+  "sideEffects": false,
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "directories": {
@@ -31,6 +29,14 @@
     "docs": "typedoc src --tsconfig typedoc-tsconfig.json",
     "prepublishOnly": "npm run build",
     "watch": "tsc -b -w --listEmittedFiles"
+  },
+  "dependencies": {
+    "@jupyterlab/coreutils": "^4.0.0-alpha.4",
+    "@lumino/coreutils": "^1.4.0",
+    "@lumino/disposable": "^1.3.2",
+    "@lumino/signaling": "^1.3.2",
+    "ajv": "^6.10.2",
+    "json5": "^2.1.1"
   },
   "devDependencies": {
     "rimraf": "~3.0.0",
